@@ -1,3 +1,11 @@
+Sun Dec 22 18:15:51 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	Patch inspired by part of SuSE's diff, although not identical.
+
+	* GNUmakefile.in: Export DESTDIR.
+	* man/Makefile.in, src/Makefile.in, zsoelim/Makefile.in: Honour
+	  DESTDIR when installing and uninstalling files.
+
 Sun Dec 22 14:14:37 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* GNUmakefile.in (dist): Don't update .po files automatically, since
